Tried to fix spacing between lines. Decided that the caps in the title are fine

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,6 @@
+
+
+
 html, body{
 	margin: 0px;
 	padding: 0px;
@@ -24,6 +27,11 @@ body{
 
 pre{
 	margin: 0px;
+	/*font-family: 'Courier New', Courier, monospace;*/
+	font-size: 13px;
+	font-family: 'Fira Code', monospace;
+	
+	
 }
 
 
